tests/ui/consts/const-eval/infinite_loop.eval_limit.stderr
error: constant evaluation is taking a long time
  --> $DIR/infinite_loop.rs:15:9
   |
LL | /         while n != 0 {
LL | |
LL | |             n = if n % 2 == 0 { n / 2 } else { 3 * n + 1 };
LL | |         }
   | |_________^
   |
   = note: this lint makes sure the compiler doesn't get stuck due to infinite loops in const eval.
           If your compilation actually takes a long time, you can safely allow the lint.
help: the constant being evaluated
  --> $DIR/infinite_loop.rs:13:18
   |
LL |       let s = [(); {
   |  __________________^
LL | |         let mut n = 113383; // #20 in https://oeis.org/A006884
LL | |         while n != 0 {
...  |
LL | |         n
LL | |     }];
   | |_____^
   = note: `#[deny(long_running_const_eval)]` on by default

error: aborting due to 1 previous error

